--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-typescript": "^7.23.2",
     "babel-jest": "^28.1.3",
     "esbuild": "^0.18.16",
+    "express-requests-logger": "^4.0.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "msw": "^1.3.2"
